--- a/content/posts/2024/06/2024-06-16-iceland.zh.md
+++ b/content/posts/2024/06/2024-06-16-iceland.zh.md
@@ -21,138 +21,138 @@ featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 
 冰岛的夏天太美，由于丰富的火山活动，不大的区域里汇集了各种神奇的地貌，过于反常以至经常让人有置身异星的错觉。这次六月初的10天行程，我们以逆时针方向自驾环岛一周，打卡了很多著名景点，也明白为什么那么多电影场景喜欢来冰岛进行拍摄：飞来这里取景简直就是作弊，风景这么好想拍出难看的照片都不容易，随手快门一捏就是一张封面。就是这么离谱。
 
-{{< img src="/images/2024/06/16/route.png" title="路线大致为逆时针环岛一周" >}}
+{{< img src="/images/2024/06/16/route.png" title="路线大致为逆时针环岛一周" caption="图里没显示，最后其实又多绕了点路去西边打卡Kirkjufell草帽山" >}}
 
 # 器材
 
 轻装简行，这次只带了两机（徕卡SL和徕卡CL）和两镜（蔡司ZM 25 2.8和ZM 35 1.4），覆盖绝大部分拍摄需求（一般是SL配ZM25拍广角，CL配ZM 35等效标头）。蔡司在晴天下搭配SL出片很有味道，下面风景照都是原图直出无P，人像照都是直接传到手机上微调下颜色凸显人物主体。走之前还纠结要不要带长焦，但长焦基本只能拿来拍动物（海豚、鲸鱼、海豹、海鹦），而我最长的一枚是[135mm的手动定焦头]({{< ref "about.md" >}})想抓拍也很困难就懒得带了。拍得到就拍，拍不到就换手机对付下(最后发现SL配ZM25基本覆盖80%出片率，尤其是人像部分)。就是这么随性。
 
-{{< img src="/images/2024/06/16/thumbnail/gears.JPG" title="两机两镜" >}}
+{{< img src="/images/2024/06/16/thumbnail/gears.JPG" title="两机两镜" caption="全是手动定焦头，不抓拍动物也够用了" >}}
 
 
 # 行程
 
 ## 6/7
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_07_first_fall.JPG" title="第一个瀑布:Seljalandsfoss" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_07-1.JPG" title="风很大，头发直接吹乱" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07_first_fall.JPG" title="参观的第一个瀑布" caption="Seljalandsfoss" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07-1.JPG" title="风很大" caption="头发直接吹乱" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_07-3.JPG" title="Katla冰洞" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_07-4.JPG" title="冰洞对面就是拍星球大战开场的一座三角形山峰" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_07_glacier.JPG" title="Katla冰川融化形成拱桥" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07-3.JPG" title="Katla冰洞" caption="需要带头盔才能进" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07-4.JPG" title="冰洞对面就是拍星球大战开场的一座三角形山峰" caption="爬冰川需要在鞋外套上特殊钉钩" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07_glacier.JPG" title="Katla冰川融化形成拱桥" caption="我们走后两天那个拱桥就融化断掉了" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_07-2.JPG" title="傍晚还没调过来时差，索性爬到vik黑沙滩的岩壁顶" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07-2.JPG" title="傍晚还没调过来时差，索性爬到vik黑沙滩的岩壁顶" caption="假装四处看风景" >}}
 
 
 ## 6/8
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_08-1.JPG" title="Svínafellsjökull冰川" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_08-1.JPG" title="Svínafellsjökull冰川" caption="亮色衣服真的跟冰岛很搭" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_08-2_1.JPG" title="Jökulsárlón冰川湖" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_08-2.JPG" title="Jökulsárlón冰川湖" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_08-2_1.JPG" title="Jökulsárlón冰川湖" caption="假装思考人生" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_08-2.JPG" title="Jökulsárlón冰川湖" caption="百年冰川的蓝色在阳光下沁人心脾" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_08-3.JPG" title="夏天的冰岛路边长满了蓝色鲁冰花田，很漂亮" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_08-3.JPG" title="夏天的冰岛路边长满了蓝色鲁冰花，很漂亮" caption="鲁冰花是专门引进冰岛来改善风沙问题的，真会选" >}}
 
 
 ## 6/9
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_09-3.JPG" title="Jökulsárlón冰川湖边到处是搁浅的冰块" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_09-4.JPG" title="" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09-3.JPG" title="Jökulsárlón冰川湖边到处是搁浅的冰块" caption="上百年的冰块拿来做鸡尾酒一定很棒" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09-4.JPG" title="黑沙滩的冰块" caption="奇形怪状" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_09_ice.JPG" title="Jökulsárlón旁的钻石沙滩上有大大小小搁浅的冰川残块，上百年前的冰剥落下来像水晶" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09_ice.JPG" title="Jökulsárlón旁的钻石沙滩上有大大小小搁浅的冰川残块" caption="上百年前的冰剥落下来像水晶" >}}
 
 {{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_1.JPG" title="坐船近距离看冰川" caption="由于全球变暖，每年冰川都会后退上百米" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_2.JPG" title="坐船近距离看冰川" caption="" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_3.JPG" title="坐船近距离看冰川" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_boat.JPG" title="船上有美军标识，是水陆两栖型的，出水直接开上岸" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_boat.JPG" title="观光船上有美军标识" caption="水陆两栖作战型，出水直接开上岸" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_09-1.JPG" title="维京人第一次登岛的小镇" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_09-2.JPG" title="" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09-1.JPG" title="维京人第一次登岛的小镇" caption="房顶长满绿草" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09-2.JPG" title="击♂剑" caption="" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_09_hourse.JPG" title="冰岛的马发型都很帅，据说这里的马血统都很纯，马匹只准出口不准进口" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09_hourse.JPG" title="冰岛的马发型都很帅" caption="据说这里的马血统都很纯，马匹只准出口不准进口" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_09-5.JPG" title="冰岛的猫猫都不怕人，随便撸" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09-5.JPG" title="冰岛的猫猫都不怕人" caption="粘人又温顺，随便撸" >}}
 
 
 ## 6/10
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_10_socks.JPG" title="冰岛甚少见烘干机，都是挂出来太阳自然烘干" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_10_socks.JPG" title="这次冰岛住的airbnb很少见有烘干机" caption="都是这么直接挂出来太阳自然烘干（好奇到了冬天极夜的时候怎么办）" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_10-1.JPG" title="和路边同色的小屋合影" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_10-1.JPG" title="和路边同色的小屋合影" caption="冰岛的房子都是五颜六色的。估计颜色要是不丰富，极夜的时候容易郁闷" >}}
 
 
 ## 6/11
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11-1.JPG" title="Hengifoss景点需要登山" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11-3.JPG" title="Hengifoss的瀑布周围有红色岩层" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11-2.JPG" title="太阳很烈,爬完山回家直接黑了两个色号" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11-1.JPG" title="Hengifoss景点" caption="需要登山" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11-3.JPG" title="Hengifoss的瀑布" caption="周围有红色岩层" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11-2.JPG" title="太阳很烈" caption="爬完山回家直接黑了两个色号" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_boat.JPG" title="废弃的船（WWII US Navy LCM ship wreck），二战期间搁浅" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11-4.JPG" title="废土风很出片" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11-5.JPG" title="Mjóifjörður公路边有一座很好看的山峰" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_boat.JPG" title="废弃的船（WWII US Navy LCM ship wreck）" caption="二战期间搁浅" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11-4.JPG" title="废土风" caption="很出片" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11-5.JPG" title="Mjóifjörður公路边" caption="有一座很好看的山峰" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_car.JPG" title="给blue rental租的混动SUV来一张靓照" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_car.JPG" title="blue rental租的混动SUV" caption="来一张靓照" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door.JPG" title="这次环岛游最喜欢的海边小镇景区：Bakkagerði" caption="整个小镇都很干净，颜色丰富，搭配赏心悦目" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door2.JPG" title="这边的门我能拍一天" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door3.JPG" title="这几张静物都是CL配ZM35 1.4拍的，颜色很舒服。" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_stop_sign.JPG" title="" caption="路边随处可见的牌子都很养眼，饱和度恰到好处" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door.JPG" title="这次环岛游最喜欢的海边小镇景区Bakkagerði" caption="整个小镇都很干净，颜色丰富，搭配赏心悦目" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door2.JPG" title="小镇很有质感，随意摆放的罐子都像是精心设计过" caption="我能拍一天" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door3.JPG" title="这几张静物都是CL配ZM35 1.4拍的" caption="颜色很舒服" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_stop_sign.JPG" title="路边随处可见的牌子都很养眼" caption="饱和度恰到好处" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_ship.JPG" title="岸上的船也都是糖果色" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_ship2.JPG" title="" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_float.JPG" title="" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_port.JPG" title="" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_port2.JPG" title="" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_ship.JPG" title="岸上的船" caption="也都是糖果色" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_ship2.JPG" title="岸上的船" caption="更多细节" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_float.JPG" title="岸上的船" caption="褪色的浮标也很好看" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_port.JPG" title="码头" caption="水面如镜" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_port2.JPG" title="岸边的陈设" caption="颜色都好和谐，真的不是专门设计过的么？" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_1.JPG" title="Hafnarhólmi小岛上海鹦每年都会飞来筑巢繁殖。雄鸟和雌鸟一旦认准彼此就会终生相伴，每年飞回第一次相遇的地方，找到彼此，然后共同孵化小鸟" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_2.JPG" title="海鹦的嘴在夏天会从灰色变成橙色，方便彼此识别身份" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_3.JPG" title="海鹦看着憨憨的，但它们其实可以憋气两分钟潜水60米深，海陆空全制霸" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_4.JPG" title="如果没找到往年的伴侣，海鹦也会找其他异性繁衍，不过一旦原配隔段时间又回来了，就会回归原配，非常忠诚" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_5.JPG" title="一对海鹦都是交替外出捕鱼，总会留一只在巢穴照顾小鸟" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_1.JPG" title="Hafnarhólmi小岛上海鹦每年都会飞来筑巢繁殖" caption="雄鸟和雌鸟一旦认准彼此就会终生相伴，每年飞回第一次相遇的地方，找到彼此，然后共同孵化小鸟" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_2.JPG" title="海鹦的嘴在夏天会从灰色变成橙色" caption="方便彼此识别身份" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_3.JPG" title="海鹦看着憨憨的，但它们其实可以憋气两分钟潜水60米深" caption="海陆空全制霸" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_4.JPG" title="如果没找到往年的伴侣，海鹦也会找其他异性繁衍" caption="不过一旦原配隔段时间又回来了，就会回归原配，非常忠诚" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_5.JPG" title="一对海鹦都是交替外出捕鱼" caption="总会留一只在巢穴照顾小鸟" >}}
 
 
 ## 6/12
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall.JPG" title="继续拍Bakkagerði的糖果色建筑" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall2.JPG" title="我们住在Blabjorg Guesthouse，餐厅很棒，还能泡澡" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall3.JPG" title="颜色层次感很强" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall.JPG" title="继续拍Bakkagerði的糖果色建筑" caption="墙面斑驳" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall2.JPG" title="我们住在这栋建筑隔壁的Blabjorg Guesthouse" caption="餐厅很棒，还能泡澡" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall3.JPG" title="冰岛房顶都是各种颜色不重样" caption="层次感很强，感觉居民会特意挑选隔壁没有的颜色来刷房顶" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12-1.JPG" title="离开Bakkagerði前往Stuðlagil Canyon" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12_red_car.JPG" title="Canyon停车场里的红色复古小车，这边经常能见到这类老古董" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12-1.JPG" title="离开Bakkagerði" caption="前往Stuðlagil Canyon" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_red_car.JPG" title="Canyon停车场里的红色复古小车" caption="这边经常能见到这类老古董，保养得真好" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12-2.JPG" title="沿途经过Dettifoss瀑布，周围都是新下的雪" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12-2.JPG" title="沿途经过Dettifoss瀑布" caption="周围都是新下的雪" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12_flower.JPG" title="抵达Húsavík观鲸小镇" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12_anderson.JPG" title="Geosea viewpoint有一栋满足强迫症的楼，很有Wes Anderson风格，可惜去的时候被一辆违规停靠的车破坏了美感" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12_jump.JPG" title="这边的公园有很多蹦床，总有小朋友在上面跳" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12_pool.JPG" title="海景无边温泉" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_flower.JPG" title="抵达Húsavík" caption="观鲸小镇" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_anderson.JPG" title="Geosea viewpoint有一栋满足强迫症的楼，很有Wes Anderson风格" caption="可惜去的时候被一辆违规停靠的车破坏了美感" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_jump.JPG" title="这边的公园有很多蹦床" caption="总有小朋友在上面跳" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_pool.JPG" title="无边温泉" caption="海景无敌" >}}
 
 
 ## 6/13
-{{< img src="/images/2024/06/16/thumbnail/2024_06_13_whale_watch.JPG" title="一早起来坐船观鲸，没有遇到鲸鱼但遇到了很多白吻海豚" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_13_whale_watch.JPG" title="一早起来坐船观鲸" caption="没有遇到鲸鱼但遇到了很多白吻海豚" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_13_anderson.JPG" title="顺道又来这栋楼，破坏对称的车走了，舒服了" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_13_anderson.JPG" title="顺道又来这栋楼，破坏对称的车走了" caption="舒服了" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_13_hot.JPG" title="Námafjall的蒸汽泥池，有小黄石的感觉" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_13_hot2.JPG" title="" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_13_hot.JPG" title="Námafjall的蒸汽泥池" caption="有小黄石的感觉" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_13_hot2.JPG" title="洞里都是翻滚的泥汤" caption="硫磺味很重" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_13_playground.JPG" title="Akureyri的公园" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_13_playground.JPG" title="抵达Akureyri" caption="这么多颜色绝对是故意这么刷的" >}}
 
 
 ## 6/14
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_14-1.JPG" title="著名的草帽山" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_14-2.JPG" title="Arnarstapi Cliff Viewpoint有一座天然石桥，桥下全是海鸥的巢" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14-1.JPG" title="多绕了点路来西边的Kirkjufell" caption="著名的草帽山打卡" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14-2.JPG" title="Arnarstapi Cliff Viewpoint有一座天然石桥" caption="桥下全是海鸥的巢" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_14_car.JPG" title="加油站偶遇很有个性的小黄车" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_14_church.JPG" title="Blönduós教堂很有型" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_14_eye_church.JPG" title="Hellissandur检查视力用的那个教堂" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_14_seal.JPG" title="Ytri Tunga沙滩上躺了一群海豹" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14_car.JPG" title="加油站偶遇很有个性的小黄车" caption="专门做的铁锈风车漆还是第一次看到" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14_church.JPG" title="Blönduós教堂" caption="很有型" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14_eye_church.JPG" title="Hellissandur检查视力用的那个教堂" caption="旁边是一大片无际的鲁冰花田" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14_seal.JPG" title="Ytri Tunga沙滩" caption="躺了一群海豹" >}}
 
 
 ## 6/15
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_15_church.JPG" title="回到雷克雅未克，购物逛街一日游，顺带在Kaffi Loki品尝了腌鲨鱼肉。估计是餐厅改良了口味，没有传说中那么冲鼻，不过多嚼两下就能闻到强烈的氨气味" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_15_church.JPG" title="回到雷克雅未克，购物逛街一日游" caption="顺带在Kaffi Loki品尝了腌鲨鱼肉。估计是餐厅改良了口味，没有传说中那么冲鼻，不过多嚼两下就能闻到强烈的氨气味" >}}
 
 
 # 再来
