--- a/content/posts/2024/06/2024-06-16-iceland.zh.md
+++ b/content/posts/2024/06/2024-06-16-iceland.zh.md
@@ -35,7 +35,7 @@ featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 ## 6/7
 
 {{< img src="/images/2024/06/16/thumbnail/2024_06_07_first_fall.JPG" title="参观的第一个瀑布" caption="Seljalandsfoss" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_07-1.JPG" title="风很大" caption="头发直接吹乱" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07-1.JPG" title="风很大，头发直接吹乱" caption="（出行前两周在Mammoth练前空翻摔断锁骨了，刚做完手术右手抬不起来没法扎辫子，索性就剃掉留3年的长发了）" >}}
 
 {{< img src="/images/2024/06/16/thumbnail/2024_06_07-3.JPG" title="Katla冰洞" caption="需要带头盔才能进" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_07-4.JPG" title="冰洞对面就是拍星球大战开场的一座三角形山峰" caption="爬冰川需要在鞋外套上特殊钉钩" >}}
