--- a/content/posts/2024/06/2024-06-16-iceland.zh.md
+++ b/content/posts/2024/06/2024-06-16-iceland.zh.md
@@ -95,7 +95,7 @@ featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 
 {{< img src="/images/2024/06/16/thumbnail/2024_06_11_door.JPG" title="这次环岛游最喜欢的海边小镇景区Bakkagerði" caption="整个小镇都很干净，颜色丰富，搭配赏心悦目" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_11_door2.JPG" title="小镇很有质感，随意摆放的罐子都像是精心设计过" caption="我能拍一天" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door3.JPG" title="这几张静物都是CL配ZM35 1.4拍的" caption="颜色很舒服" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door3.JPG" title="这几张静物都是CL配ZM35 1.4拍的" caption="直出颜色就很舒服" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_11_stop_sign.JPG" title="路边随处可见的牌子都很养眼" caption="饱和度恰到好处" >}}
 
 {{< img src="/images/2024/06/16/thumbnail/2024_06_11_ship.JPG" title="岸上的船" caption="也都是糖果色" >}}
