--- a/content/posts/2024/06/2024-06-16-iceland.zh.md
+++ b/content/posts/2024/06/2024-06-16-iceland.zh.md
@@ -114,22 +114,26 @@ featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 ## 6/12
 
 {{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall.JPG" title="继续拍Bakkagerði的糖果色建筑" caption="墙面斑驳" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall2.JPG" title="我们住在这栋建筑隔壁的Blabjorg Guesthouse" caption="餐厅很棒，还能泡澡" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall2.JPG" title="我们住在这栋建筑隔壁的Blabjorg Guesthouse" caption="餐厅很棒，住宿还包泡spa蒸桑拿" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall3.JPG" title="冰岛房顶都是各种颜色不重样" caption="层次感很强，感觉居民会特意挑选隔壁没有的颜色来刷房顶" >}}
 
 {{< img src="/images/2024/06/16/thumbnail/2024_06_12-1.JPG" title="离开Bakkagerði" caption="前往Stuðlagil Canyon" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_12_red_car.JPG" title="Canyon停车场里的红色复古小车" caption="这边经常能见到这类老古董，保养得真好" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12-2.JPG" title="沿途经过Dettifoss瀑布" caption="周围都是新下的雪" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12-3.JPG" title="沿途经过Dettifoss瀑布" caption="周围都是新下的雪" >}}
+
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12-2.JPG" title="昨天爬Hengifoss瀑布没注意防晒，今天直接成黑碳" caption="pose：摸不着头脑" >}}
 
 {{< img src="/images/2024/06/16/thumbnail/2024_06_12_flower.JPG" title="抵达Húsavík" caption="观鲸小镇" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_12_anderson.JPG" title="Geosea viewpoint有一栋满足强迫症的楼，很有Wes Anderson风格" caption="可惜去的时候被一辆违规停靠的车破坏了美感" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_pool.JPG" title="Wes Anderson小黄楼边就是无边温泉" caption="海景无敌" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_12_jump.JPG" title="这边的公园有很多蹦床" caption="总有小朋友在上面跳" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_12_pool.JPG" title="无边温泉" caption="海景无敌" >}}
 
 
 ## 6/13
 {{< img src="/images/2024/06/16/thumbnail/2024_06_13_whale_watch.JPG" title="一早起来坐船观鲸" caption="没有遇到鲸鱼但遇到了很多白吻海豚" >}}
+
+{{< img src="/images/2024/06/16/thumbnail/2024_06_13_dolphin.jpg" title="海豚很友好" caption="小海豚活泼好动，经常跳出水面翻身玩耍" >}}
 
 {{< img src="/images/2024/06/16/thumbnail/2024_06_13_anderson.JPG" title="顺道又来这栋楼，破坏对称的车走了" caption="舒服了" >}}
 
@@ -152,8 +156,23 @@ featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 
 ## 6/15
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_15_church.JPG" title="回到雷克雅未克，购物逛街一日游" caption="顺带在Kaffi Loki品尝了腌鲨鱼肉。估计是餐厅改良了口味，没有传说中那么冲鼻，不过多嚼两下就能闻到强烈的氨气味" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_15_church.JPG" title="回到雷克雅未克" caption="购物逛街一日游" >}}
 
+
+# 食物
+
+冰岛餐厅的消费跟纽约曼岛差不多一个价（好处是不需要付小费），羊肉和各类海鲜供应很足，味道都蛮好的。小某书上有很多推荐就不一一列举餐厅了。在这里贴一些手机随便拍的食物。
+
+{{< img src="/images/2024/06/16/breakfast.jpg" title="Blabjorg Guesthouse的自助早餐" caption="蛮好吃的" >}}
+{{< img src="/images/2024/06/16/burger.jpg" title="汉堡" caption="没记错是羊肉馅的" >}}
+{{< img src="/images/2024/06/16/lamb.jpg" title="羊腱子肉(Lamb Shank)" caption="自驾游一天后吃上一份还是很满足的，但量确实不大" >}}
+{{< img src="/images/2024/06/16/lobster.jpg" title="Hofn港口边的Pakkhus餐厅" caption="来到港口肯定得吃龙虾了，我们是晚上10点最后一桌到，还送了好多面包和鱼肉给我们桌" >}}
+{{< img src="/images/2024/06/16/salmon.jpg" title="看着像三文鱼，但看菜单好像又不是" caption="皮很脆，酱料很好吃" >}}
+{{< img src="/images/2024/06/16/shrimp.jpg" title="深海大虾" caption="虾肉鲜甜嫩弹" >}}
+
+最后一天顺带在雷克雅未克的Kaffi Loki品尝了腌鲨鱼肉。估计是餐厅改良了口味，没有传说中那么冲鼻，不过多嚼两下就能闻到强烈的氨气味。很小一块就忘记拍照了。本来还想试试传说中的鲱鱼罐头，但Bónus超市里没找到那种铁罐头，只找到玻璃水罐头。试了下洋葱味的，味道其实还不错。
+
+{{< img src="/images/2024/06/16/bonus.jpg" title="Bónus的吉祥物是这只贱萌的猪存钱罐" caption="专门搞了一个Bónus购物袋回纽约买菜用，提着粉猪脸大摇大摆走过，做超市里最讨打的人" >}}
 
 # 再来
 
