--- a/content/gallery/digital/2019/12/07/2019-12-07-weekly.zh.md
+++ b/content/gallery/digital/2019/12/07/2019-12-07-weekly.zh.md
@@ -27,4 +27,4 @@ Weekly visual project - 2019/12/07
 >When I have a job to do like that, where you have to do something that takes a lot of effort, slowly, I pretend I’m in jail. Don’t laugh. And if I’m in jail, time is of no consequence. In other words, if it takes a week to cut this, it’ll take a week. What else have I got to do? I’m going to be here for twenty years. See? This is a kind of mental trick.   
 -- Jacob Rabinow 
 
-[^1]: 出产日期参考自[历久弥新的黑漆徕卡m4-徕卡m4的使用感受](历久弥新的黑漆徕卡m4-徕卡m4的使用感受)
+[^1]: 出产日期参考自[历久弥新的黑漆徕卡m4-徕卡m4的使用感受](https://i50mm.com/gear%E5%99%A8%E6%9D%90/%E5%8E%86%E4%B9%85%E5%BC%A5%E6%96%B0%E7%9A%84%E9%BB%91%E6%BC%86%E5%BE%95%E5%8D%A1m4-%E5%BE%95%E5%8D%A1m4%E7%9A%84%E4%BD%BF%E7%94%A8%E6%84%9F%E5%8F%97/)
