--- a/content/gallery/digital/2024/10/14/2024-10-14-weekly.zh.md
+++ b/content/gallery/digital/2024/10/14/2024-10-14-weekly.zh.md
@@ -11,7 +11,7 @@ slug: "2024 10 14 Weekly Visual Project"
 featured_image: 2024/10/14/leica_m9_e43-1010454.jpg
 ---
 
-Some random photos shot during recent trip in Taiwan and Tokyo.
+Some random photos shot during recent trip in Taiwan, Chengdu and Tokyo.
 
 <!--more-->
 <!--toc-->
