--- a/content/posts/2024/12/2024-12-15-leica-m11.zh.md
+++ b/content/posts/2024/12/2024-12-15-leica-m11.zh.md
@@ -1,14 +1,154 @@
 ---
-title: "2024 12 15 Leica M11"
+title: "旧衣新穿：徕卡M11转接老镜头"
 date: 2024-12-15T20:07:07-05:00
 series:
-- s
+- camera
 categories:
-- c
+- visual
 tags:
-- t
-slug: "2024 12 15 Leica M11"
-featured_image: 2024/12/15T20:07:07/05:00.JPG
-draft: true
+- Leica
+- digital
+- summilux
+- chinese
+slug: "Leica m11"
+featured_image: 2024/12/15/m11_front_clean.jpg
 ---
 
+当20世纪的经典旁轴机身搭载上21世纪的最新数码技术。
+<!--more-->
+
+# 合二为一
+
+手上有一台徕卡SL，专门拿来玩单反头和放大头的转接；还有一台徕卡CL，负责出门带着游玩时随拍。很喜欢SL的出片风格和颜色，无奈SL体积太大不方便带出门；很喜欢CL的小巧便携和优秀画质，无奈是APSC画幅拿来玩转接总会丢一部分视角。所以一直在想有没有办法把两台相机合二为一。
+
+{{< img src="/images/2024/12/15/cl_sl.JPG" title="徕卡SL和CL" caption="配蔡司ZM 25 2.8和ZM 35 1.4" >}}
+
+相比M240和M10，新一代的徕卡M11更改了测光方式并配上了高容量的电池，使实时取景的实用性极大提升，拿来玩转接体验可能会不错。由于喜欢CL的轻便（403克），于是搞来了更轻的黑色版M11（530克）来试试看。
+
+{{< img src="/images/2024/12/15/m11_box.jpg" title="徕卡M11包装" caption="徕卡近些年普通版的包装越来越‘环保’，少了很多仪式感" >}}
+
+把前面红色Leica可乐标一贴，纯黑一体，很低调。
+
+{{< img src="/images/2024/12/15/m11_front_clean.jpg" title="徕卡M11" caption="黑色材料为铝，表面磨砂工艺很耐磨，也不易留指纹" >}}
+
+和祖师爷M3对比下大小。
+
+{{< img src="/images/2024/12/15/m11_m3.jpg" title="徕卡M11对比M3" caption="M11厚度跟M3一致，稍微高一点。据说M12会变得跟M3一样高" >}}
+
+配上Oberwerth半身皮套提高下握持手感。
+
+{{< img src="/images/2024/12/15/m11_front_1.jpg" title="纯黑Oberwerth皮套" caption="这个半身套附带一个可拆卸磁吸背套，用来保护屏幕" >}}
+
+M11背后机身铭文也是黑色的，而黑色版M11P的铭文都是白色的。从这点来说M11会比M11P还更低调些。我在机顶帖了透明膜，但M11新的防指纹涂层工艺是磨砂质感的，保护膜不能完全贴合。
+
+{{< img src="/images/2024/12/15/m11_back.jpg" title="简约的后背" caption="屏幕终于和中间皮饰对齐了。M10的屏幕会比皮饰上下边都更高一点，逼死强迫症" >}}
+
+其实M11取消底盖我觉得还挺好的。新电池非常耐用，自带usb-c充电口，随时可以拿充电宝充电，再也不用带上那一大坨充电器了。官方送了一根USB-C转苹果lightning的线可以直接连闪电接口的苹果手机，不过我一次都没用过，因为M11的WiFi传输速度还挺快的，我都是用徕卡FOTOS app导入图片。
+
+{{< img src="/images/2024/12/15/m11_bottom.jpg" title="没有底盖了" caption="新的电池很耐用，好评" >}}
+
+# 转接老头
+
+试着把我手上一堆老镜头转接到M11上看看。
+
+{{< img src="/images/2024/12/15/m11_ultron.jpg" title="配单反头" caption="蔡司凹玉" >}}
+
+{{< img src="/images/2024/12/15/m11_steinheil.jpg" title="配单反头" caption="斯坦海尔Quinon" >}}
+
+{{< img src="/images/2024/12/15/m11_43.jpg" title="配单反头" caption="宾得大公主，穷人版Q3 43" >}}
+
+{{< img src="/images/2024/12/15/m11_pentax.jpg" title="配单反头" caption="宾得三公主都可以插上" >}}
+
+{{< img src="/images/2024/12/15/m11_summicron-r.jpg" title="配单反头" caption="接徕卡R头Summicron 50能黄斑对焦" >}}
+
+{{< img src="/images/2024/12/15/m11_schneider.jpg" title="接放大头" caption="放大头素质相当高，配合M11的高像素很好玩，我拿来扫描胶片" >}}
+
+{{< img src="/images/2024/12/15/m11_rollei40_1.jpg" title="配M口原生镜头" caption="禄来40 2.8" >}}
+
+{{< img src="/images/2024/12/15/m11_e43.jpg" title="配M口原生镜头" caption="徕卡E43在M11上没有M9上来得出彩" >}}
+
+{{< img src="/images/2024/12/15/m11_vm35.jpg" title="配M口原生镜头" caption="VM35 1.5 type 1，一般挂机选这枚" >}}
+
+# 样片
+
+带着M11转接大大小小的镜头随拍了些样片。老镜头确实“喂不饱”M11这块6000万像素各项指标都名列前茅的传感器，但出片的怀旧味道还是能找到的。在对比过新老镜头出片效果后，果然还是现代镜头和M11搭配起来更合适些。老镜头还是接在SL上慢慢拍吧。
+
+## 宾得公主头
+
+三公主里面，出片来说感觉小公主（FA 31）跟M11最搭。配大公主（FA43）的体积是最和谐的，堪称穷人版Q3 43，而且带上大公主的重量（685克）甚至比Q3 43（772克）的重量还更轻一点。三枚公主头的出片颜色都很棒，SMC镀膜名不虚传。
+
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-1.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-2.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-3.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-4.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-5.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-6.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-7.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-8.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-9.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-10.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-11.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-12.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+{{< img src="/images/2024/12/15/sample/Leica_M11_pentax_31-13.jpg" title="配宾得公主头" caption="小公主FA31" >}}
+
+{{< img src="/images/2024/12/15/sample/leica_m11_pentax_fa_43-1.jpg" title="配宾得公主头" caption="大公主FA43" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_pentax_fa_43-2.jpg" title="配宾得公主头" caption="大公主FA43" >}}
+
+{{< img src="/images/2024/12/15/sample/leica_m11_pentax_fa_77-1.jpg" title="配宾得公主头" caption="二公主FA77" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_pentax_fa_77-2.jpg" title="配宾得公主头" caption="二公主FA77" >}}
+
+
+## 斯坦海尔Quinon
+
+Quinon中心很锐但边缘球差很厉害，是一颗氛围感很好的镜头。
+
+{{< img src="/images/2024/12/15/sample/leica_m11_steinheil_quinon-1.jpg" title="配斯坦海尔" caption="Quinon" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_steinheil_quinon-2.jpg" title="配斯坦海尔" caption="Quinon" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_steinheil_quinon-3.jpg" title="配斯坦海尔" caption="Quinon" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_steinheil_quinon-4.jpg" title="配斯坦海尔" caption="Quinon" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_steinheil_quinon-5.jpg" title="配斯坦海尔" caption="Quinon" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_steinheil_quinon-6.jpg" title="配斯坦海尔" caption="Quinon" >}}
+
+## 蔡司ZM 25 2.8
+
+蔡司这枚25 2.8素质很好，配合6000万高像素的M11，可以通过剪裁二次构图来出片。不过我还是不太适应这种拍法。
+
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-1.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-2.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-3.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-4.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-5.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-6.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-7.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-8.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-9.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-10.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-11.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-12.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-13.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-14.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-15.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_zm_25-16.jpg" title="配日蔡" caption="ZM 25 2.8" >}}
+
+## 福伦达VM 35 1.5
+
+福伦达近期推出的镜头素质和体积都保持的很不错。这枚VM 35 1.5 type 1也是铝做的，很轻，搭配M11很舒服。
+
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-1.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-2.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-3.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-4.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-5.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-6.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-7.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-8.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-9.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-10.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-11.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-12.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-13.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-14.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-15.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-16.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-17.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
+{{< img src="/images/2024/12/15/sample/leica_m11_vm_35_15-18.jpg" title="配日福" caption="nokton VM 35 1.5" >}}
