--- a/content/posts/2024/05/2024-05-02-leica-cl.zh.md
+++ b/content/posts/2024/05/2024-05-02-leica-cl.zh.md
@@ -106,19 +106,24 @@ featured_image: 2024/05/02/compare-1.JPG
 {{< img src="/images/2024/05/02/sample/leica_cl_meyer_lydith_30-1000216.jpg" title="徕卡CL" caption="👆RAW样片" >}}
 {{< img src="/images/2024/05/02/sample/leica_cl_meyer_lydith_30-1000222.jpg" title="徕卡CL" caption="👆RAW样片" >}}
 
-目前又下单了一枚ZM 25 2.8，在来的路上了，之后有样张再补上。
+还试过转接ZM 35 1.4拍的直出也非常惊艳：
 
-## 客串嘉宾M9
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door2.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door3.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_stop_sign.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
 
-顺带一提，这次出门同时还把M9带上了，挂的镜头是Rollei 40mm f2.8 hft。禄莱这枚小巧的松纳头味道相当好，顺手发几张样片在这里。
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_ship.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_ship2.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_float.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_port.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_port2.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
 
-{{< img src="/images/2024/05/02/m9-2.JPG" title="徕卡M9" caption="👆银机银镜真的好看" >}}
-
-{{< img src="/images/2024/05/02/sample/leica_m9_rollei_40_hft-1009493.jpg" title="徕卡M9" caption="👆RAW样片" >}}
-{{< img src="/images/2024/05/02/sample/leica_m9_rollei_40_hft-1009505.jpg" title="徕卡M9" caption="👆RAW样片" >}}
-{{< img src="/images/2024/05/02/sample/leica_m9_rollei_40_hft-1009512.jpg" title="徕卡M9" caption="👆RAW样片" >}}
-{{< img src="/images/2024/05/02/sample/leica_m9_rollei_40_hft-1009523.jpg" title="徕卡M9" caption="👆RAW样片" >}}
-{{< img src="/images/2024/05/02/sample/leica_m9_rollei_40_hft-1009532.jpg" title="徕卡M9" caption="👆RAW样片" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_1.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_2.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_3.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_4.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_5.JPG" title="徕卡CL" caption="👆配ZM 35 1.4" >}}
 
 
 # 后话
