--- a/content/posts/2024/05/2024-05-02-leica-cl.zh.md
+++ b/content/posts/2024/05/2024-05-02-leica-cl.zh.md
@@ -136,11 +136,13 @@ featured_image: 2024/05/02/compare-1.JPG
 
 {{< img src="/images/2024/05/02/Leica_gears.JPG" title="过时的器材" caption="👆西德产的富士平替" >}}
 
-2025/1/16 更新：
+# 更新
 
-太喜欢cl了，卖掉银色x100v之后，又入了一台银色cl！配18-56大小跟Q2一样，配23大小跟加了遮光罩的x100一样。银色款cl跟巴纳克机型异曲同工，纤细优雅，搭配银色饼干头([禄来40 2.8]({{< ref "/posts/2024/08/2024-08-05-rollei-sonnar-40-ltm.zh.md" >}}))非常好看。真的很可惜徕卡放弃了这个系列！
+2025/1/16 半年后的更新：
+
+太喜欢cl了，卖掉银色x100v之后，又入了一台银色cl！配18-56自动对焦变焦套头大小跟Q2一样，配23定焦头大小跟加了遮光罩的x100一样。银色款cl跟巴纳克机型异曲同工，纤细优雅，搭配银色饼干头([禄来40 2.8]({{< ref "/posts/2024/08/2024-08-05-rollei-sonnar-40-ltm.zh.md" >}}))非常好看。真的很可惜徕卡放弃了这个系列！
 
 {{< img src="/images/2024/05/02/cl-m9p-1.JPG" title="银色CL" caption="对比银色M9-P" >}}
 {{< img src="/images/2024/05/02/cl-m9p-3.JPG" title="银色CL" caption="对比银色M9-P" >}}
 {{< img src="/images/2024/05/02/q2-cl-23.JPG" title="银色CL" caption="对比Q2" >}}
-{{< img src="/images/2024/05/02/q2-cl-1856.JPG" title="银色CL" caption="对比Q2" >}}
+{{< img src="/images/2024/05/02/q2-cl-1856.jpg" title="银色CL" caption="对比Q2" >}}
